# HW_7

./: alembic.ini  pyproject.toml
migrations/versions/: 5590100f2613_init.py  e4a0f668aed9_add_tables.py
src/: connect_to_db.py  database.sqlite  models.py  my_select.py  seed.py
